--- a/css/preparacion.css
+++ b/css/preparacion.css
@@ -145,7 +145,7 @@ body {
 }
 
 .ingrediente-nombre {
-    font-size: 14px;
+    font-size: 16px;
     color: #000000;
     margin-top: 5px;
 }
@@ -158,9 +158,9 @@ body {
 }
 
 .detalles-texto {
-    font-size: 16px;
-    line-height: 1.4;
+    font-size: 18px;
+    line-height: 1.6;
     color: #000000;
-    text-align: justify;
+    text-align: left;
    
 }
