--- a/css/recetas.css
+++ b/css/recetas.css
@@ -1,43 +1,134 @@
 body {
-  
-    background-color: #f7f9f5;
+
+    background-color: #f0f3ed;
+    font-family: 'Cairo', sans-serif;
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    margin: 0;
-    padding: 10px;
 }
 
 .receta-card {
     background-color: #8bb18d;
     border-radius: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-    max-width: 600px;
-    width: 100%;
+    width: 85%;
+    max-width: 450px;
     padding: 20px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    min-height: 90vh;
 }
 
 .header {
-    width: 100%;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-bottom: 20px;
+    padding: 10px 0;
+
+
 }
+
 
 .header-icon {
     font-size: 24px;
-    background-color: #ffffff;
-    padding: 10px;
-    border-radius: 100%;
+    background-color: #e3e6e0;
+    padding: 5px;
+    border-radius: 50%;
     cursor: pointer;
-    
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
 }
 
 
 
+
+.icon {
+    display: inline-block;
+    width: 45px;
+    height: 45px;
+    fill: #C14600;
+    vertical-align: middle;
+}
+
+
+/* header  nav */
+.logo-imagen {
+    width: 80px;
+    height: 80px;
+}
+
+
+.header-titulo {
+    font-family: "Julee", "cursive";
+    font-size: 30px;
+    font-weight: 700;
+
+}
+
+
+
+/* contenedores de las recetas */
+.cards-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px 0;
+}
+
+
+
+.card-comida {
+    display: flex;
+    background-color: #f0f3ed;
+    align-items: center;
+    border-radius: 20px;
+    padding: 15px;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    transition: transform 0.2s ease;
+    /* gap: 12px; */
+
+}
+
+.card-comida:hover {
+    transform: translateY(-5px);
+}
+
+
+.card-imagen {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 15px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); 
+    
+}
+
+.comida-imagen {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+.btn-receta {
+    color: white;
+    background-color: #C14600;
+    border-radius: 12px;
+    padding: 1rem 1rem;
+    font-family: "Julee", "cursive";
+    font-size: 1rem;
+    font-weight: bold;
+    text-align: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+
+}
