--- a/css/ingredientes.css
+++ b/css/ingredientes.css
@@ -1,40 +1,14 @@
-/* * {
-    margin: 0;
-    box-sizing: border-box;
-} */
-
 body {
 
     background-color: #FEF9E1;
 }
 
-/* index.html logo y titulo  */
-/* centra el contenido de la pantalla */
-.container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100vh;
-
-
-}
-
-/* centra el logo y el titulo */
-.container-principal {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 10rem;
-}
-
 .img-logo {
-    width: 600px;
-    /* max-width: 1200px; */
+    width: 100%;
+    max-width: 600px;
     height: auto;
     display: block;
-    margin-left: 0rem;
+    margin-left: 2rem;
 }
 
 .titulo {
@@ -47,29 +21,7 @@ body {
     z-index: 1;
 }
 
-.btn-enlace {
-    margin: 2rem;
-    border: none;
-
-}
-
-
-.btn-inicio {
-    border: none;
-    border-radius: 12px;
-    background-color: #C14600;
-    width: 7rem;
-    height: 3rem;
-    text-align: center;
-    color: white;
-    font-family: "Julee", "cursive";
-    font-size: 2rem;
-
-}
-
-
-/* Estilos de la pantalla de los ingredientes */
-/* .subtitulo {
+.subtitulo {
     font-family: "Julee", "cursive";
     font-size: 1.3rem;
     color: black;
@@ -85,20 +37,27 @@ body {
     font-weight: 400;
 }
 
+
+#grid-ingredientes-container{
+    margin-top: 1.2rem;
+    margin-bottom: 8rem;
+}
 .grid-ingredientes {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: auto;
     grid-gap: 10px;
-    margin: 2rem 0.5rem 8rem 0.5rem;
+    margin: 10px;
+    /* margin-bottom: 10px; */
+    /* margin: 1rem 0.4rem 1rem 0.4rem; */
 
 }
 
 .grid-ingredientes img {
     width: 100%;
-    max-width: 150px;
+    max-width: 140px;
     height: auto;
-    padding: 7px;
+    /* padding: 7px; */
     border-radius: 12px;
     cursor: pointer;
     transition: transform 0.2s ease-in-out;
@@ -122,16 +81,18 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #E5D0AC;
-    padding: 1rem;
-    border-top: 2px solid black;
-    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+    /* background-color: #e5d0ac; */
+    /* padding: 1rem; */
+    /* border-top: 2px solid black; */
+    /* box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1); */
 }
 
 .btn-recetas {
     color: white;
     background-color: #C14600;
     border-radius: 12px;
+    width: 300px;
+    margin: 12px;
     padding: 1rem 2rem;
     font-family: "Julee", "cursive";
     font-size: 2rem;
@@ -179,4 +140,4 @@ body {
     border-radius: 8px;
 
 }
- */
+
