--- a/css/recetas.css
+++ b/css/recetas.css
@@ -1,25 +1,33 @@
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
 
     background-color: #f0f3ed;
     font-family: 'Cairo', sans-serif;
-    margin: 0;
+    margin: 5px;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
 }
 
 .receta-card {
     background-color: #8bb18d;
     border-radius: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-    width: 85%;
-    max-width: 450px;
-    padding: 20px;
+    width: 100%;
+    max-width: 400px;
+    padding: 10px;
+    
     display: flex;
     flex-direction: column;
-    min-height: 90vh;
+    min-height: 95vh;
 }
 
 .header {
@@ -143,6 +151,7 @@ body {
     text-decoration: none;
     display: flex;
     align-items: center;
+    
 }
 
  
@@ -158,6 +167,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
+    margin:2rem 0;
     transition: background-color 0.3s ease;
 }
 
