--- a/css/preparacion.css
+++ b/css/preparacion.css
@@ -1,24 +1,31 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 body {
-  
     background-color: #f7f9f5;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
     margin: 0;
     padding: 10px;
 }
+  
 
 .receta-card {
     background-color: #8bb18d;
     border-radius: 40px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-    max-width: 600px;
+    max-width: 400px;
     width: 100%;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     text-align: center;
 }
 
@@ -134,7 +141,7 @@ body {
     border-radius: 15px;
     padding: 10px;
     width: calc(25% - 15px);
-    min-width: 60px;
+    min-width: 90px;
 }
 
 .ingrediente-imagen {
@@ -153,14 +160,16 @@ body {
 .detalles-box {
     background-color: #f0f3ed;
     border-radius: 15px;
-    padding: 20px;
-    margin-top: 20px;
+    padding: 12px;
+    margin-top:10px;
 }
 
 .detalles-texto {
     font-size: 18px;
-    line-height: 1.6;
+    line-height: 1.3;
     color: #000000;
-    text-align: left;
+    text-align: justify;
+    padding: 0;
+    margin: 0;
    
 }
