--- a/css/preparacion.css
+++ b/css/preparacion.css
@@ -22,6 +22,7 @@ body {
     max-width: 400px;
     width: 100%;
     padding: 20px;
+    /* margin-top: 10px; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,9 +53,17 @@ body {
 /* Iconos con SVG en línea */
 .icon {
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
     fill: #C14600;
+    vertical-align: middle;
+}
+
+.fa-utensils{
+    color: #C14600;
+    display: inline-block;
+    width: 26px;
+    height: 26px;
     vertical-align: middle;
 }
 
@@ -102,7 +111,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 20px;
-    font-size: 22px;
+    font-size: 16px;
     color: #ffffff;
     margin-bottom: 20px;
     font-family: "Julee", "cursive";
@@ -173,3 +182,5 @@ body {
     margin: 0;
    
 }
+
+
