--- a/css/preparacion.css
+++ b/css/preparacion.css
@@ -166,21 +166,43 @@ body {
     margin-top: 5px;
 }
 
-.detalles-box {
+.preparacion-box {
     background-color: #f0f3ed;
     border-radius: 15px;
     padding: 12px;
     margin-top:10px;
 }
 
-.detalles-texto {
-    font-size: 18px;
-    line-height: 1.3;
-    color: #000000;
-    text-align: justify;
-    padding: 0;
-    margin: 0;
+.preparacion-lista {
+   list-style: decimal inside;
+   padding:0;
+   margin: 0;
    
 }
+
+.preparacion-pasos{
+  display: flex;
+  align-items: center;
+  gap: 0.6rem;
+  margin-bottom: 0.8rem;
+  font-size: 1rem;
+  width:350px;
+    
+}
+.preparacion-pasos input[type= "checkbox"] {
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+  accent-color: #dd804a;
+    
+}
+
+.preparacion-pasos label {
+  cursor: pointer;
+  transition: color 0.3s ease, text-decoration 0.3s ease;
+  text-align: justify;
+  padding: 0.2rem;
+}
+
 
 
